# Thesis_ABUS_code

code/: .gitignore  Makefile  environment.yml  pyproject.toml  requirements.txt
code/configs/detect/: embedding_extraction.yaml  nndet_dataset.yaml  nndet_planning_notes.md  training.yaml
code/configs/splits/: fold_split_5cv.json
code/scripts/: analyze_beam_axis.py  audit_embeddings_step13.py  build_nndet_dataset.py  check.sh  check_all_spacings.py  check_py38_compat.py  generate_candidates.py  inspect_beam_axis.py  inspect_detector_quality.py  local_data_sanity.py  make_split.py  memwatch.sh  probe_volume.py  train_all_folds.py  verify_local_data.py  verify_nndet_dataset.py
code/src/abus/: __init__.py
code/src/abus/data/: __init__.py  labels.py  split.py
code/src/abus/detect/: __init__.py  candidates.py  ensemble.py  grid_pool.py  nndet_convention.py  nndet_inference.py  nndet_io.py  train.py
code/src/abus/geometry/: __init__.py  bbox.py  convert.py
code/src/abus/io/: __init__.py  loader.py
code/tests/: test_bbox.py  test_candidates.py  test_convert.py  test_grid_pool.py  test_inspect_detector_quality.py  test_loader.py  test_nndet_convention.py  test_nndet_inference.py  test_nndet_io.py  test_smoke.py  test_split.py
code/tests/fixtures/: synthetic_nrrd.py
