[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "abus"
version = "0.1.0"
description = "GNN-based false-positive reduction for 3D ABUS tumor detection."
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
dependencies = [
    "numpy>=1.24,<2.0",
    "pynrrd>=1.0,<2.0",
    "pandas>=2.0,<3.0",
    "scikit-learn>=1.3,<2.0",
    "matplotlib>=3.7,<4.0",
    "SimpleITK>=2.3,<3.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4,<1.0",
    "black>=24.0,<25.0",
    "mypy>=1.8,<2.0",
    "pytest>=8.0,<9.0",
    "hypothesis>=6.90,<7.0",  # property-based tests for bbox round-trips (STORY_00_03)
]

[tool.setuptools.packages.find]
where = ["src"]

# ---------------------------------------------------------------------------
# ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py310"
# verify_local_data.py pre-dates this story and is explicitly "untouched" per the
# STORY_00_01 spec Module/file layout table.
extend-exclude = ["scripts/verify_local_data.py"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["abus"]

# ---------------------------------------------------------------------------
# black
# ---------------------------------------------------------------------------
[tool.black]
line-length = 100
target-version = ["py310"]
# verify_local_data.py pre-dates this story and is explicitly "untouched" per the
# STORY_00_01 spec Module/file layout table.
extend-exclude = "scripts/verify_local_data\\.py"

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
strict = false
disallow_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
no_implicit_reexport = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = [
    "nrrd.*",
    "pandas.*",
    "sklearn.*",
    "SimpleITK.*",
    "yaml.*",
]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = ["gpu: marks tests that require a GPU (deselect with -m 'not gpu')"]
